--- a/.github/workflows/auto_push_dev.yaml
+++ b/.github/workflows/auto_push_dev.yaml
@@ -21,6 +21,9 @@ jobs:
           git config --global user.email "github-actions@github.com"
 
       - name: Force push to dev branch
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
           git checkout dev
           git push origin dev --force
