--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/cli": "^17.3.11",
     "@angular/compiler-cli": "^17.3.0",
     "@angular/localize": "^17.3.12",
+    "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~5.1.0",
     "boxicons": "^2.1.4",
     "jasmine-core": "~5.1.0",
