--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@ng-icons/core": "^28.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "@tailwindcss/postcss": "^4.1.3",
+    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
