--- a/.github/workflows/deploy_main.yml
+++ b/.github/workflows/deploy_main.yml
@@ -38,6 +38,6 @@ jobs:
 
       - name: Deploy to GCS
         run: |
-          gsutil -m rsync -r dist/pilates-fe/browser/ gs://$GCS_BUCKET_NAME
+          gsutil -m rsync -r dist/pilates-fe/ gs://$GCS_BUCKET_NAME
         env:
           GCS_BUCKET_NAME: ${{ secrets.GCS_BUCKET_NAME }}
