--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-icons/core": "^28.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "ng-zorro-antd": "^17.4.1",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
