--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ctrl/tinycolor": "^4.1.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@ng-icons/bootstrap-icons": "^31.2.0",
     "@ng-icons/core": "^28.0.0",
